8-25-2025
- move some modules from /templates to /mixins


8-24-2025
- add syncthing
- use grub for all machines by default
- change default path for minecraft server


8-22-2025
- hotfix for yazi, xdg-open doesn't seem to work correctly with it anymore
- update flake


8-16-2025
- release v7
- finalize think-two
- add gtk portal to home-manager hyprland config


8-09-2025
- release V7 beta


8-06-2025
- update flake to linux 6.16
- 1 sops key for hosts


8-05-2025
- tweak personal module
- removed modules.ssh.enable
- add gnome-text-editor and steamtinkerlaunch to programs for nixos and home-manager
- remove vscode from some hosts in favor of gnome-text-editor
- openssh will now use password auth by default unless the host is a server
- removed timeZone from default profile
- removed juno from hosts


8-04-2025
- remove hardcoded evince as pdf viewer from yazi
- add some default apps for xdg mimetypes: images, pdf, and video files


7-31-2025
- append betterfox patch to the shyfox firefox theme
- betterfox and shyfox configurations will now check for programs._1password-gui.enable
  before installing the 1password firefox extension


7-30-2025
- rewrite swayidle and hypridle services to include configuration options "on-bat" and "on-ac" for timeouts.
- set new default timeout values for sway and hyprland configurations:
  on-bat:
  - lockscreen = 150 seconds
  - dpms (screen-blank) = 150 seconds
  - suspend = 600 seconds
	on-ac:
	- lockscreen = 0
	- dpms = 0
	- suspend = 0
- add kanshi profile for twilight


7-29-2025
- fix an issue where dpms timeout for swayidle still referred to swaylock.settings


7-28-2025
- add format script for nix files under /scripts/nixfmt.sh
- format all nix files in the project to follow the nixpkgs rfc style standard
- fix an import bug for take-screenshot-xorg where the import was missing the .nix extension
- fix nvidia module to use hardware.nvidia.open = true; by default.