@@ -38,7 +38,6 @@ in
       determinate.enable = lib.mkDefault true;
       nh.enable = lib.mkDefault true;
       zsh.enable = lib.mkDefault true;
-      direnv.enable = lib.mkDefault true;
 
       # enable the profile requested by meta.profiles.${profile}
       profiles = {
