@@ -12,5 +12,14 @@ in
 
   config = lib.mkIf cfg.enable {
     environment.systemPackages = import ../../../mixins/nix-dev-packages.nix { inherit pkgs; };
+
+    programs.direnv = {
+      enable = true;
+      silent = true;
+      nix-direnv.enable = true;
+    };
+    environment.variables = {
+      DIRENV_WARN_TIMEOUT = 0;
+    };
   };
 }
